# colorization-backend

./: .dockerignore  Dockerfile  README.md  inference.py  pyproject.toml  requirements.txt
.github/workflows/: backend-ci-cd.yaml
app/: inference.py  main.py  network.py
