[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi[standard]>=0.115.13",
    "ipykernel>=6.29.5",
    "notebook>=7.4.3",
    "python-multipart>=0.0.20",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
